--- a/12.05.2025 - TypeScript - DataFilter/src/css/style.css
+++ b/12.05.2025 - TypeScript - DataFilter/src/css/style.css
@@ -19,46 +19,44 @@
 }
 
 .card {
-    transition: 0.4s;
+    background-color: transparent;
+    width: 300px;
+    height: 300px;
+    perspective: 1000px;
     border: 1px solid black;
     border-radius: 0;
 
-    .card-body-2 {
-        opacity: 0;
-        max-height: 0;
-        overflow: hidden;
-        transition: opacity 0.8s, max-height 0.8s;
-    }
+    .card-inner {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        transition: transform 0.6s;
+        transform-style: preserve-3d;
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.1);
 
-    &:hover .card-body-2 {
-        opacity: 1;
-        max-height: 500px;
-        /* təqribi dəyər, ehtiyacına görə dəyiş */
-    }
+        .card-body-1,
+        .card-body-2 {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            backface-visibility: hidden;
+        }
 
-    .card-body-1 {
-        .arrow-btn {
-            background-color: rgb(11, 215, 195);
-            border: none;
-            border-radius: 50%;
-            width: 30px;
-            height: 30px;
-            color: white;
+        .card-body-1 {
+            color: black;
+        }
 
+        .card-body-2 {
+            color: black;
+            transform: rotateX(180deg);
+            overflow-y: scroll;
         }
     }
 
-
-
-
-
+    &:hover {
+        .card-inner {
+            transform: rotateX(180deg);
+        }
+    }
 }
-
-/* .arrow-btn:hover {
-    .card-body-2 {
-        display: block;
-    }
-    .card-title {
-        color: red;
-    }
-} */
